# hunters-mark

./: Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
shell/: hm.bash  hm.fish  hm.zsh
src/: backend.rs  cli.rs  error.rs  main.rs
src/commands/: add.rs  init.rs  jump.rs  list.rs  mod.rs  remove.rs
src/config/: global.rs  mod.rs  paths.rs
src/ui/: mod.rs  selector.rs
