[package]
name = "hunters-mark"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
directories = "6.0"
color-eyre = { version = "0.6", default-features = false }
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
fuzzy-matcher = "0.3.7"
dialoguer = "0.12"

[profile.samply]
inherits = "release"
debug = true
